--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lotide",
   "version": "1.0.0",
   "description": "a better lodash",
-  "main": "assertArraysEqual.js",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
