--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lotide",
+  "name": "@jpenglabs/lotide",
   "version": "1.0.0",
   "description": "a better lodash",
   "main": "index.js",
